--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,3 +66,32 @@ footer div{
 footer a{
     color: #024e76;
 }
+
+section{
+    padding: 60px;
+}
+
+/*Hero Style Start*/
+.hero{
+    background-image: url("../images/hero-bg.jpg");
+    height: 650px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+/*Hero Style End */
+
+/*Hero form style start*/
+.hero-form{
+    color: #024e76;
+    background-color: #fce138;
+    padding: 20px;
+    width: 500px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;    
+}
+/*Hero form style end*/
