--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,9 +79,7 @@ section{
     background-position: center;
     position: relative;
 }
-/*Hero Style End */
 
-/*Hero form style start*/
 .hero-form{
     color: #024e76;
     background-color: #fce138;
@@ -94,4 +92,36 @@ section{
     bottom: 120px;
     right: 140px;    
 }
-/*Hero form style end*/
+
+.hero-form h3{
+    margin: 0;
+    font-size: 24px;    
+}
+
+.hero-form p{
+    margin: 5px 0 15px 0;
+}
+.form-input{
+    display: block;
+    border-style:solid;
+    border-width:  1px;
+    border-color:  #024e76 ;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom:15px;
+}
+
+
+.hero-form label{
+    margin: 0 5px;
+}
+
+button{
+    background-color: #024e76;
+    color: #fce138;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+/*Hero Style End */
