--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,3 +230,17 @@ span{
     font-size: 17px;
     line-height: 1.3;
 }
+
+.contact{
+    background: #024e76;
+    text-align: center;
+}
+
+.contact h2{
+    color: #fce138;
+}
+
+.contact-info iframe{
+    width: 400px;
+    height: 400px;
+}
