--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ button{
     border-color: #fce138;
 }
 
-.secondary-color{
+.secondary-border{
     border-color: #39a6b2;
 }
 
@@ -242,5 +242,30 @@ span{
 
 .contact-info iframe{
     width: 400px;
-    height: 400px;
+    height: 400px;   
+}
+
+.contact-info div{
+    display: inline-block;
+    width: 410px;
+    text-align: left;
+    vertical-align: top;
+    margin:  30px 0 0 60px;
+    color: white ;
+}
+
+.contact-info h3{
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p , .contact-info address{
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a{
+    color: #fce138;
 }
