--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,18 +54,18 @@ footer{
     background-color: #fce138;  
     width: 100%;
     padding: 40px 35px; 
-   
+    display: flex;   
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-footer h2{
-    display: inline;
+footer h2{    
     margin: 0;
     color: #024e76;
-    font-size: 30px;
+    font-size: 30px;    
 }
 
 footer div{
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -81,23 +81,37 @@ section{
 /*Hero Style Start*/
 .hero{
     background-image: url("../images/hero-bg.jpg");
-    height: 650px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.hero-cta{
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2{
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 
 .hero-form{
     color: #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     border-style: solid;
     border-width: 3px;
-    border-color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;    
+    border-color: #024e76; 
+    width: 40%;
+    margin: 3.5%;  
 }
 
 .hero-form h3{
