add flexbox to the steps

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,27 @@ button{
 .step h3{
     color: #024e76;
     font-size: 46px;
+    flex: 1 30%;
+}
+
+.step-info{
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.step-img{
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-text{
+    flex: 12;
+}
+
+.steps-img img{
+    max-width: 100%;
 }
 
 .steps-text p{
@@ -201,7 +222,7 @@ button{
 
 .step-text h4{
     font-size: 26px;
-    line-height: 1.6;
+    line-height: 1.5;
     color: #024e76;
 }
 
